<resources>
    <string name="app_name">FirstApp</string>
    <string name="nombre">Name</string>
    <string name="dataForm">Type Your Information</string>
    <string name="age">Age</string>
    <string name="colorHex">Color</string>
    <string name="rememberMe">Remember Me</string>
    <string name="sendInfo">Send Info</string>
    <string name="helloWorld">Hello World</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>