<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vargascript.firstapp.ui.list.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.vargascript.firstapp.ui.crud.CrudFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_crud" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vargascript.firstapp.ui.map.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_map" />

     <fragment
        android:id="@+id/nav_config"
        android:name="com.vargascript.firstapp.ui.config.ConfigFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_config" />
</navigation>